--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string-array name="style_array">
         <item>Aodnet-opt</item>
         <item>UNet_8-opt</item>
+        <item>GLADNet-opt</item>
     </string-array>
 </resources>
